      construct taking parts of the hosts in a resource group in a manner
      that several clusters are using the same hosts. So the amount of CPU
      and memory of all hosts is the CPU and memory of the cluster. Monitoring
      this makes no sense because there are no thresholds for alerting. For
      example 50% CPU usage of a cluster can be one host with 90%, and two
      with 30% each. With an average of 50% everything seems to be ok but one
      machine has definetely a problem. Same for memory. 

- 21 Aug 2014 M.Fuerstenau version 0.9.19
  - host_runtime_info()
    - Some minor corrections in output.
  - host_storage_info()
    - Some corrections in output for LUNs. Using <code> in output was a
      really stupid idea because the code (like ok,error-lostCommunication or
      whatever is valid there) was interpreted as non existing HTML code.
    - Some corrections in output for multipath/paths.
    - Bugfix. Due to a wrong placed curly bracked the output was doubled. Fixed.
  - host_runtime_info()
    - Small bugfix. It may happen within the heath check that some values are not set
      by VMware/hardware. In this case we have an
      "[Use of uninitialized value in concatenation (.) or string ..."
      To avoid this we check the values of the hash with each loop an in case a value
      is not set we replace it whit the string "Unknown".

- 24 Aug 2014 M.Fuerstenau version 0.9.20
  - datastore_volumes_info(). Some improvements.
    - Output. Because it was hard to see an alerting volume within the mass of others
      the output is now grouped so that all alerting volumes are listed on top with 
      a leading comment. Second are the volumes with no errors. Theses volumes are
      seperated by a line and also introduced by a comment.
    - New commandline switch --spaceleft.  When checking multiple volumes the threshold
      must be given in either percent (old) OR space left on device.(New)